deploy/manifests/ingress-default.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-default
  namespace: pxdocs
spec:
  rules:
  - host: docs.portworx.com
    http:
      paths:
      - backend:
          serviceName: docs-2-3
          servicePort: 80
        path: /
  - host: 2.0.docs.portworx.com
    http:
      paths:
      - backend:
          serviceName: docs-2-0
          servicePort: 80
        path: /
  - host: 2.1.docs.portworx.com
    http:
      paths:
      - backend:
          serviceName: docs-2-1
          servicePort: 80
        path: /
  - host: 2.2.docs.portworx.com
    http:
      paths:
      - backend:
          serviceName: docs-2-2
          servicePort: 80
        path: /
  - host: 2.3.docs.portworx.com
    http:
      paths:
      - backend:
          serviceName: docs-2-3
          servicePort: 80
        path: /
  - host: 1.7.docs.portworx.com
    http:
      paths:
      - backend:
          serviceName: docs-1-7
          servicePort: 80
        path: /
  tls:
  - hosts:
    - docs.portworx.com
    - docsnew.portworx.com
    secretName: ingress-pxdocs-tls
  - hosts:
    - 1.7.docs.portworx.com
    secretName: ingress-pxdocs-1.7
  - hosts:
    - 2.0.docs.portworx.com
    secretName: ingress-pxdocs-2.0
  - hosts:
    - 2.1.docs.portworx.com
    secretName: ingress-pxdocs-2.1
  - hosts:
    - 2.2.docs.portworx.com
    secretName: ingress-pxdocs-2.2
  - hosts:
    - 2.3.docs.portworx.com
    secretName: ingress-pxdocs-2.3
